wrap fix

--- a/styles/content.css
+++ b/styles/content.css
@@ -7,6 +7,7 @@
 
 .items-wrap {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
   margin-top: 49px;
 }
